// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Marker renders agent marker 1`] = `
<styled.div
  style={
    Object {
      "left": "4.5px",
    }
  }
>
  <AgentMarker
    mark={
      Object {
        "doc": Object {
          "mark": "agent",
        },
        "docType": "agentMark",
        "offset": 1000,
      }
    }
  />
</styled.div>
`;

exports[`Marker renders error marker 1`] = `
<styled.div
  style={
    Object {
      "left": "4.5px",
    }
  }
>
  <ErrorMarker
    mark={
      Object {
        "doc": Object {
          "error": Object {
            "error": Object {
              "grouping_key": "123",
            },
            "trace": Object {
              "id": "123",
            },
            "transaction": Object {
              "id": "456",
            },
          },
          "id": "123",
          "name": "foo",
          "serviceColor": "#fff",
          "serviceName": "bar",
        },
        "docType": "error",
        "offset": 10000,
      }
    }
  />
</styled.div>
`;
